--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -26,7 +26,7 @@
     <body>
         <!-- Navigation-->
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light top-fixed">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark top-fixed">
             <div class="container px-4 px-lg-5">
                 <a class="navbar-brand" href="{% url 'blog:home' %}">وبلاگ من</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -90,7 +90,7 @@
             </div>
         </footer>
         <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="{% static 'blog/js/scripts.js' %}"></script>
     </body>
