--- a/templates/blog/list.html
+++ b/templates/blog/list.html
@@ -21,23 +21,19 @@
         </header>
 
         <!-- Main Content-->
+        {% comment %} 
         <div class="container px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-md-10 col-lg-8 col-xl-7 form-floating">
                     {% block header %}{% endblock header %}
-                    <aside>
-                        {% popular_posts %}
-                        {% star_posts %}
-                        {% hot_posts %}
-                    </aside>
                     <!-- Post preview-->
                     {% for post in object_list %}
                         <div class="post-preview">
                             <a href="{% url 'blog:detail' post.slug %}">
                                 <h2 class="post-title">
-                                    {{post.title}}
+                                        {{post.title}}
                                     {% if post.is_special %}
-                                    <span class="badge badge-danger fs-5">ویژه</span>
+                                        <span class="badge badge-danger fs-5">ویژه</span>
                                     {% endif %}
                                 </h2>
                                 <div class="mt-3">{% ratings post %}</div>
@@ -54,24 +50,104 @@
                                 {% endfor %}
                             </div>
 
-                            <span class="fs-6">بازدیدها : {{post.hits.count}}</span>
-                        </div>
-                    {% empty %}
-                        <p>محتوایی برای نمایش وجود ندارد !</p>
-                    {% endfor %}
-                    <!-- Divider-->
-                    <hr class="my-4" />
-                    <!-- Pager-->
+        <span class="fs-6">بازدیدها : {{post.hits.count}}</span>
+        {% endcomment %}
+
+        <!-- Page content-->
+        <div class="container">
+            <div class="row">
+                {% block header %}{% endblock header %}
+                <!-- Blog entries-->
+                <div class="col-lg-8">
+                    <!-- Nested row for non-featured blog posts-->
+                    <div class="row">
+                            <!-- Blog post-->
+                            {% for post in object_list %}
+                            <div class="col-lg-6">
+                                <div class="card mb-4">
+                                    <a href="{% url 'blog:detail' post.slug %}"><img class="card-img-top" src="{{post.thumbnail.url}}" alt="..." /></a>
+                                    <div class="card-body">
+                                        <div class="small text-muted">{{post.publish}}</div>
+                                        <h2 class="card-title h4">
+                                                {{post.title}}
+                                            {% if post.is_special %}
+                                                <span class="badge badge-danger fs-5">ویژه</span>
+                                            {% endif %}
+                                        </h2>
+                                        <p class="card-text">{{post.description|striptags|truncatewords:20}}</p>
+                                        <a class="btn btn-primary" href="{% url 'blog:detail' post.slug %}">خواندن بیشتر ←</a>
+                                        
+                                    </div>
+                                </div>
+
+                            </div>
+                            {% empty %}
+                                <p>محتوایی برای نمایش وجود ندارد !</p>
+                            {% endfor %}
+                    </div>
+                    <!-- Pagination-->
                     {% if is_paginated  %}
-                        <div class="d-flex justify-content-end mb-4 pager-button">
+
+                    <nav aria-label="Pagination">
+                        <hr class="my-0" />
+                        <ul class="pagination justify-content-center my-4">
+                            <!-- #TODO : fix pagination for search box -->
                             {% if page_obj.has_previous %}
-                                <a class="btn btn-primary text-uppercase ms-3" href="{% block previous_page_url %}{% endblock previous_page_url %}">پست های جدید &rarr;</a>
+                                <li class="page-item"><a class="page-link" href="?page={{page_obj.previous_page_number}}">صفحه بعد &rarr;</a></li>
+                            {% else %}
+                                <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1" aria-disabled="true">صفحه بعد &rarr;</a></li>
                             {% endif %}
+                            {% for i in paginator.page_range %}
+                                {% if page_obj.number == i %}
+                                    <li class="page-item active"><a class="page-link" href="?page={{i}}">{{i}}</a></li>
+                                {% else %}
+                                    <li class="page-item"><a class="page-link" href="?page={{i}}">{{i}}</a></li>
+                                {% endif %}
+                            {% endfor %}
+                            
                             {% if page_obj.has_next %}
-                                <a class="btn btn-primary text-uppercase" href="{% block next_page_url %}{% endblock next_page_url %}">پست های قدیمی &larr;</a>
-                            {% endif %}
-                        </div>
+                                <li class="page-item"><a class="page-link" href="?page={{page_obj.next_page_number}}">صفحه قبل &larr;</a></li>
+                            {% else %}
+                                <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1" aria-disabled="true">صفحه قبل &larr;</a></li>
+                            {% endif %}                            
+                        </ul>
+                    </nav>
+
                     {% endif %}
+                </div>
+                <!-- Side widgets-->
+                <div class="col-lg-4">
+                    <!-- Search widget-->
+                    <div class="card mb-4">
+                        <div class="card-header">جستجو</div>
+                        <div class="card-body">
+                            <form class="input-group" action="{% url 'blog:search' %}">
+                                <input name="q" class="form-control" type="text" placeholder="عبارت را برای جستجو وارد کنید..." aria-label="عبارت را برای جستجو وارد کنید..." aria-describedby="button-search" />
+                                <button class="btn btn-primary" id="button-search" type="submit">جستجو</button>
+                            </form>
+                        </div>
+                    </div>
+                    <!-- Categories widget-->
+                    <div class="card mb-4">
+                        <div class="card-header">دسته بندی ها</div>
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <ul class="list-inline mb-0">
+                                        {% for category in categories %}
+                                            <li class="list-inline-item"><a href="{% url 'blog:category' category.slug %}">{{category.title}}</a></li>
+                                        {% endfor %}
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Hot Posts widget-->
+                    {% popular_posts %}
+                    {% star_posts %}
+                    {% hot_posts %}
+
+                </div>
             </div>
         </div>
 
