show views count on home page

--- a/static/blog/css/custom.css
+++ b/static/blog/css/custom.css
@@ -138,3 +138,7 @@ span.post-name, span.post-date, span.author-meta {
   color:black;
   text-decoration: none;
 }
+
+.card-body a{
+  text-decoration: none;
+}
