fix: comments post object rename in template

--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -107,7 +107,7 @@
                     <!-- Comments section-->
 
                     <div class="col-md-12 col-lg-8 col-xl-7">
-                        {% render_comments object request %}
+                        {% render_comments post request %}
                         {% include_bootstrap %}
                     </div>
                     {% comment %} <section class="mb-5">
