--- a/templates/blog/list.html
+++ b/templates/blog/list.html
@@ -62,7 +62,7 @@
                                                     <a href="{% url 'blog:author' post.author.username %}">{{post.author.get_full_name}}</a></span><br>
                                                 </span>
                                                 <!-- post date -->
-                                                <span class="post-date">{{post.publish}}</span>
+                                                <span class="post-date">{{post.publish|date:"d b Y"}}</span>
                                             </span>
                                         </div>
                                     </div>
