--- a/templates/blog/partials/widget.html
+++ b/templates/blog/partials/widget.html
@@ -1,3 +1,4 @@
+{% if posts %}
 <div class="card mb-4">
     <div class="card-header">{{title}}</div>
     <div class="card-body">
@@ -10,3 +11,4 @@
         </div>
     </div>
 </div>
+{% endif %}
