fix: make search box input required

--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -41,7 +41,7 @@
                         {% endif %}
                     </ul>
                     <form class="d-flex" action="{% url 'blog:search' %}">
-                        <input class="form-control mr-sm-2" type="search" placeholder="جستجو" aria-label="جستجو" name="q">
+                        <input class="form-control mr-sm-2" type="search" placeholder="جستجو" aria-label="جستجو" name="q" required>
                         <button class="btn btn-success my-2 my-sm-0 px-3 py-2" type="submit">
                             <i class="fa-solid fa-magnifying-glass"></i>
                         </button>
