change style of "no posts" message template

--- a/templates/blog/list.html
+++ b/templates/blog/list.html
@@ -70,7 +70,7 @@
 
                             </div>
                             {% empty %}
-                                <p>محتوایی برای نمایش وجود ندارد !</p>
+                                <h3 class="alert alert-danger text-center">محتوایی برای نمایش وجود ندارد !</h3>
                             {% endfor %}
                     </div>
                     <!-- Pagination-->
